# moex-codex

./: README.md  pyproject.toml
config/: strategy.yml  universe.yml
data/analytics/: asset_metrics.csv  backtest_daily.csv  backtest_daily_max_sharpe.csv  backtest_daily_robust.csv  backtest_rebalances.csv  backtest_rebalances_max_sharpe.csv  backtest_rebalances_robust.csv  backtest_summary.csv  capm.csv  concentration.csv  corr.csv  frontier.csv  frontier_weights.csv  multifactor.csv  portfolio_point.csv  portfolio_points.csv  risk_contributions_max_sharpe.csv  risk_contributions_robust.csv  rolling_weights.csv  weights_max_sharpe.csv  weights_robust.csv
data/processed/: prices.csv  prices_raw.csv  returns.csv
data/raw/candles/: IMOEX.csv  IMOEX.meta.json  LKOH.csv  LKOH.meta.json  LQDT.csv  LQDT.meta.json  OZON.csv  OZON.meta.json  PHOR.csv  PHOR.meta.json  PLZL.csv  PLZL.meta.json  RU000A105QX1.csv  RU000A105QX1.meta.json  RU000A108Q29.csv  RU000A108Q29.meta.json  RU000A10CMR3.csv  RU000A10CMR3.meta.json  RU000A10DQA8.csv  RU000A10DQA8.meta.json  SBER.csv  SBER.meta.json  SPBE.csv  SPBE.meta.json  SU26207RMFS9.csv  SU26207RMFS9.meta.json  SU26212RMFS9.csv  SU26212RMFS9.meta.json  T.csv  (+15 more)
docs/: TODO.md
reports/: defense.md
src/moex_portfolio/: attribution.py  backtest.py  cli.py  config.py  estimation.py  frontier.py  logging_utils.py  metrics.py  moex.py  multifactor.py  optimizer.py  paths.py  presentation.py  processing.py  report.py  robustness.py  web.py
src/moex_portfolio.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
